--- a/projects.html
+++ b/projects.html
@@ -61,39 +61,56 @@
     <section class="projects-header">
         <h1><b>Projects</b></h1>
     </section>
-    
-    <div class="projects-container">
-        <div class="project-card">
-            <div class="slider">
-                <img src="assets/images/StainsWeb/baner.png" class="active" alt="Baner">
+    <div id="projects-flex">
+        <div class="projects-container">
+            <div class="project-card">
+                <div class="slider">
+                    <img src="assets/images/Projects/Riplrr.png" class="active" alt="Baner">
+                </div>
+
+                <h2>Riplrr</h2>
+                <div class="tags-container">
+                    <div class="tag highlighted">Management & Development</div>
+                    <div class="tag">JavaScript</div>
+                    <div class="tag">Node.js</div>
+                    <div class="tag">HTML and CSS</div>
+                </div>
+                <p>Riplrr is an all-in-one Discord bot. It offers moderation, economy, management, fun, and more. It has many features that are heavily AI-based</p>
+                <a href="https://riplrr.pages.dev" class="more">Learn more...</a>
             </div>
 
-            <h2>stainowy.vercel.app</h2>
-            <div class="tags-container">
-                <div class="tag highlighted">Web Development</div>
-                <div class="tag">JavaScript</div>
-                <div class="tag">HTML and CSS</div>
+
+            <div class="project-card">
+                <div class="slider">
+                    <img src="assets/images/Projects/StainowyWeb.png" class="active" alt="Baner">
+                </div>
+
+                <h2>stainowy.vercel.app</h2>
+                <div class="tags-container">
+                    <div class="tag highlighted">Web Development</div>
+                    <div class="tag">JavaScript</div>
+                    <div class="tag">HTML and CSS</div>
+                </div>
+                <p>stainowy.vercel.app is my portfolio site written in HTML with CSS and JavaScript. It contains information about me and my projects. You are on this site!</p>
+                <a href="https://github.com/stainowy/stainowy.vercel.app/" class="more">Learn more...</a>
             </div>
-            <p>stainowy.vercel.app is my portfolio site written in HTML with CSS and JavaScript. It contains information about me and my projects. You are on this site!</p>
-            <a href="https://github.com/stainowy/stainowy.vercel.app/" class="more">Learn more...</a>
+
+            <div class="project-card">
+                <div class="slider">
+                    <img src="assets/images/Projects/SCheck.png" class="active" alt="Baner">
+                </div>
+
+                <h2>SCheck-Blocklist</h2>
+                <div class="tags-container">
+                    <div class="tag highlighted">Management & Development</div>
+                    <div class="tag">Markdown</div>
+                    <div class="tag">Python</div>
+                    <div class="tag">HTML and CSS</div>
+                </div>
+                <p>SCheck-Blocklist - Your system for blocking what you don't want. Easy to integrate and use blocklist of links and phrases.</p>
+                <a href="https://scheck-blocklist.vercel.app/" class="more">Learn more...</a>
+            </div>
         </div>
-
-        <div class="project-card">
-            <div class="slider">
-                <img src="assets/images/SCheck/baner.png" class="active" alt="Baner">
-            </div>
-
-            <h2>SCheck-Blocklist</h2>
-            <div class="tags-container">
-                <div class="tag highlighted">Management & Development</div>
-                <div class="tag">Markdown</div>
-                <div class="tag">Python</div>
-                <div class="tag">HTML and CSS</div>
-            </div>
-            <p>SCheck-Blocklist - Your system for blocking what you don't want. Easy to integrate and use blocklist of links and phrases.</p>
-            <a href="https://scheck-blocklist.vercel.app/" class="more">Learn more...</a>
-        </div>
-
         
     </div>
 
