Update v9 - add project

--- a/projects.html
+++ b/projects.html
@@ -79,6 +79,19 @@
                 <a href="https://riplrr.pages.dev" class="more">Learn more...</a>
             </div>
 
+            <div class="project-card">
+                <div class="slider">
+                    <img src="assets/images/Projects/Thallium.png" class="active" alt="Baner">
+                </div>
+
+                <h2>Thallium</h2>
+                <div class="tags-container">
+                    <div class="tag highlighted">Management & Development</div>
+                    <div class="tag">Many technologies</div>
+                </div>
+                <p>Programming Studio. We connect what can be connected! We create solid, modern applications in cooperation with creators and projects, focusing on quality</p>
+                <a href="https://thallium.pages.dev/" class="more">Learn more...</a>
+            </div>
 
             <div class="project-card">
                 <div class="slider">
