fix: footer repo link

--- a/privacy.html
+++ b/privacy.html
@@ -79,7 +79,7 @@
             <a href="/LICENSE" target="_blank">&copy; 2025 Stainowy All rights reserved.</a>
             <div>
                 <a href="/privacy">Privacy Policy</a>
-                <a href="https://github.com/Stainowy/stainowy.pages.dev" target="_blank">Repository</a>
+                <a href="https://github.com/Stainowy/stainowy.vercel.app" target="_blank">Repository</a>
             </div>
     </footer>
 </body>
