--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
     <script defer src="assets/js/hamburger.js"></script>
     <script defer src="assets/js/animations.js"></script>
-
+    <script defer src="assets/js/contact.js"></script>
 
     <meta property="og:title" content="Stainowy" />
     <meta property="og:description" content="Hi, I am Stainowy... I am a young programmer and coordinator driven by passion." />
