--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div class="error-baner fade-in-up">
-        <h1>404</h1>
+        <h1 id="error-header">404</h1>
         <p>
             Oooops! We couldn't find this page
         </p>
